--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@capacitor/core": "^8.0.1",
     "@capacitor/local-notifications": "^8.0.0",
     "@supabase/supabase-js": "^2.91.1",
+    "html-to-image": "^1.11.13",
     "jspdf": "^4.0.0",
     "jspdf-autotable": "^5.0.7",
     "react": "^19.2.3",
