--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@capacitor/android": "^8.0.1",
-    "@capacitor/cli": "^8.0.1",
+    "@capacitor/cli": "^8.0.2",
     "@capacitor/core": "^8.0.1",
     "@capacitor/local-notifications": "^8.0.0",
     "@supabase/supabase-js": "^2.91.1",
@@ -42,5 +42,8 @@
     "typescript": "~5.8.2",
     "vite": "^6.2.0",
     "vitest": "^4.0.18"
+  },
+  "overrides": {
+    "tar": "^7.5.7"
   }
 }
